--- a/francaise.html
+++ b/francaise.html
@@ -1,185 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OhMyFood | À la française</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <!-- Partie du Header -->
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet">
+
+</head>
+<body>
+
+<!-- Partie du Header -->
     <header>
-      <a href="index.html">
-        <button type="button"><i class="fa-solid fa-arrow-left"></i></button>
-      </a>
-      <img src="img/ohmyfood.png" alt="logo ohmyfood" />
-      <!-- LOGO ICI -->
+        <a href="index.html">
+            <button type="button"><i class="fa-solid fa-arrow-left"></i></button>
+        </a>
+        <img src="img/ohmyfood.png" alt="logo ohmyfood"> <!-- LOGO ICI -->
     </header>
 
-    <!-- Partie de l'image de fond -->
+<!-- Partie de l'image de fond -->
     <section class="picture">
-      <img
-        src="img/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-        alt="image de fond du menu A la française"
-      />
+        <img src="img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image de fond du menu A la française">
     </section>
 
-    <!-- Partie de la présentation du menu -->
+<!-- Partie de la présentation du menu -->
     <section class="menu">
-      <div class="title">
-        <h2 class="title_menu">À la française</h2>
-        <i class="fa-regular fa-heart"></i>
-      </div>
-      <!-- Partie Entrées du menu-->
-      <div class="categorie">
-        <h3>Entrées</h3>
-        <span class="bar_divider"></span>
+        <div class="title">
+            <h2 class="title_menu">À la française</h2>
+            <i class="fa-regular fa-heart"></i>    
+        </div>
+     <!-- Partie Entrées du menu-->
+        <div class="categorie">
+            <h3>Entrées</h3>
+            <span class="bar_divider"></span>
 
-        <article class="label_box">
-          <div class="anim_label">
-            <span>Tartare de poulpe acidulé</span>
-            <div class="presentation_entree">
-              <p>Aux zests d'orange</p>
-              <p class="price">25€</p>
-            </div>
-          </div>
-          <i class="fa-solid fa-circle-check"></i>
-        </article>
+            <article class="label_box">
+                <div class="anim_label">
+                    <span>Tartare de poulpe acidulé</span>
+                    <div class="presentation_entree">
+                        <p>Aux zests d'orange</p>
+                        <p class="price">25€</p>
+                    </div>
+                </div>
+                <i class="fa-solid fa-circle-check"></i>   
+            </article>
 
-        <article class="label_box">
-          <div class="anim_label">
-            <span>Velouté de légumes d'antan</span>
-            <div class="presentation_entree">
-              <p>carotte, panais, topinambour</p>
-              <p class="price">35€</p>
-            </div>
-          </div>
-          <i class="fa-solid fa-circle-check"></i>
-        </article>
+            <article class="label_box">
+                <div class="anim_label">
+                    <span>Velouté de légumes d'antan</span>
+                    <div class="presentation_entree">
+                        <p>carotte, panais, topinambour</p>
+                        <p class="price">35€</p>
+                    </div>
+                </div>
+                <i class="fa-solid fa-circle-check"></i>   
+            </article>
 
-        <article class="label_box">
-          <div class="anim_label">
-            <span>Soupe à l'oignon</span>
-            <div class="presentation_entree">
-              <p>Revisitée</p>
-              <p class="price">20€</p>
-            </div>
-          </div>
-          <i class="fa-solid fa-circle-check"></i>
-        </article>
-      </div>
+            <article class="label_box">
+                <div class="anim_label">
+                    <span>Soupe à l'oignon</span>
+                    <div class="presentation_entree">
+                        <p>Revisitée</p>
+                        <p class="price">20€</p>
+                    </div>
+                </div>
+                <i class="fa-solid fa-circle-check"></i>   
+            </article>
 
-      <!-- Partie des plats du menu -->
-      <div class="categorie">
-        <h3>Plats</h3>
-        <span class="bar_divider"></span>
+        </div>
+    
+     <!-- Partie des plats du menu -->
+        <div class="categorie">
+            <h3>Plats</h3>
+            <span class="bar_divider"></span>
 
-        <article class="label_box">
-          <div class="anim_label">
-            <span>Coquilles Saint-Jacques</span>
-            <div class="presentation_entree">
-              <p>Accompagnées d'une purée de panais</p>
-              <p class="price">40€</p>
-            </div>
-          </div>
-          <i class="fa-solid fa-circle-check"></i>
-        </article>
+            <article class="label_box">
+                <div class="anim_label">
+                    <span>Coquilles Saint-Jacques</span>
+                    <div class="presentation_entree">
+                        <p>Accompagnées d'une purée de panais</p>
+                        <p class="price">40€</p>
+                    </div>
+                </div>
+                <i class="fa-solid fa-circle-check"></i>   
+            </article>
 
-        <article class="label_box">
-          <div class="anim_label">
-            <span>Magret de canard</span>
-            <div class="presentation_entree">
-              <p>Et parmentier de pommes de terres</p>
-              <p class="price">35€</p>
-            </div>
-          </div>
-          <i class="fa-solid fa-circle-check"></i>
-        </article>
+            <article class="label_box">
+                <div class="anim_label">
+                    <span>Magret de canard</span>
+                    <div class="presentation_entree">
+                        <p>Et parmentier de pommes de terres</p>
+                        <p class="price">35€</p>
+                    </div>
+                </div>
+                <i class="fa-solid fa-circle-check"></i>   
+            </article>
 
-        <article class="label_box">
-          <div class="anim_label">
-            <span>Pigeonneau d'Ille-et-Vilaine</span>
-            <div class="presentation_entree">
-              <p>sur son lit de gnocchis aux légumes</p>
-              <p class="price">44€</p>
-            </div>
-          </div>
-          <i class="fa-solid fa-circle-check"></i>
-        </article>
-      </div>
+            <article class="label_box">
+                <div class="anim_label">
+                    <span>Pigeonneau d'Ille-et-Vilaine</span>
+                    <div class="presentation_entree">
+                        <p>sur son lit de gnocchis aux légumes</p>
+                        <p class="price">44€</p>
+                    </div>
+                </div>
+                <i class="fa-solid fa-circle-check"></i>   
+            </article>
 
-      <!-- Partie des desserts du menu-->
-      <div class="categorie">
-        <h3>Desserts</h3>
-        <span class="bar_divider"></span>
+        </div>
 
-        <article class="label_box">
-          <div class="anim_label">
-            <span>Pétales de violettes glacés</span>
-            <div class="presentation_dessert">
-              <p>Et purée de noisettes</p>
-              <p class="price">18€</p>
-            </div>
-          </div>
-          <i class="fa-solid fa-circle-check"></i>
-        </article>
+     <!-- Partie des desserts du menu-->
+        <div class="categorie">
+            <h3>Desserts</h3>
+            <span class="bar_divider"></span>
 
-        <article class="label_box">
-          <div class="anim_label">
-            <span>Fondant au chocolat</span>
-            <div class="presentation_entree">
-              <p>Revisité</p>
-              <p class="price">22€</p>
-            </div>
-          </div>
-          <i class="fa-solid fa-circle-check"></i>
-        </article>
+            <article class="label_box">
+                <div class="anim_label">
+                    <span>Pétales de violettes glacés</span>
+                    <div class="presentation_dessert">
+                        <p>Et purée de noisettes</p>
+                        <p class="price">18€</p>
+                    </div>
+                </div>
+                <i class="fa-solid fa-circle-check"></i>   
+            </article>
 
-        <article class="label_box">
-          <div class="anim_label">
-            <span>Millefeuille croustillant</span>
-            <div class="presentation_entree">
-              <p>Myrtilles et pâte d'amande</p>
-              <p class="price">23€</p>
-            </div>
-          </div>
-          <i class="fa-solid fa-circle-check"></i>
-        </article>
-      </div>
+            <article class="label_box">
+                <div class="anim_label">
+                    <span>Fondant au chocolat</span>
+                    <div class="presentation_entree">
+                        <p>Revisité</p>
+                        <p class="price">22€</p>
+                    </div>
+                </div>
+                <i class="fa-solid fa-circle-check"></i>   
+            </article>
 
-      <div class="btn_container">
-        <button type="button" class="generic">Commander</button>
-      </div>
+            <article class="label_box">
+                <div class="anim_label">
+                    <span>Millefeuille croustillant</span>
+                    <div class="presentation_entree">
+                        <p>Myrtilles et pâte d'amande</p>
+                        <p class="price">23€</p>
+                    </div>
+                </div>
+                <i class="fa-solid fa-circle-check"></i>   
+            </article>
+
+        </div>
+
+        <button type="button" class="order">Commander</button>
+
     </section>
+
     <!-- Partie du Footer -->
     <footer>
-      <h4>ohmyfood</h4>
-      <ul>
-        <!--logo-->
-        <li>Proposer un restaurant</li>
-        <!--logo-->
-        <li>Devenir partenaire</li>
-        <li>Mentions légales</li>
-        <li>Contact</li>
-      </ul>
+        <h4>ohmyfood</h4>
+        <ul>
+            <!--logo--><li>Proposer un restaurant</li>
+            <!--logo--><li>Devenir partenaire</li>
+            <li>Mentions légales</li>
+            <li>Contact</li>
+        </ul>
     </footer>
-  </body>
+
+</body>
 </html>
