--- a/delice.html
+++ b/delice.html
@@ -1,173 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OhMyFood | Le décile des sens</title>
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet">
-
-</head>
-<body>
-<!-- Partie du Header -->
-<header>
-    <a href="index.html">
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- Partie du Header -->
+    <header>
+      <a href="index.html">
         <button type="button"><i class="fa-solid fa-arrow-left"></i></button>
-    </a>
-    <img src="img/ohmyfood.png" alt="logo ohmyfood"> <!-- LOGO ICI -->
-</header>
+      </a>
+      <img src="img/ohmyfood.png" alt="logo ohmyfood" />
+      <!-- LOGO ICI -->
+    </header>
 
-<!-- Partie de l'image de fond -->
-<section class="picture">
-    <img src="img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image de fond du menu Le délice des sens">
-</section>
+    <!-- Partie de l'image de fond -->
+    <section class="picture">
+      <img
+        src="img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+        alt="image de fond du menu Le délice des sens"
+      />
+    </section>
 
-<!-- Partie de la présentation du menu -->
-<section class="menu">
-    <div class="title">
+    <!-- Partie de la présentation du menu -->
+    <section class="menu">
+      <div class="title">
         <h2 class="title_menu">Le délice des sens</h2>
-        <i class="fa-regular fa-heart"></i>    
-    </div>
- <!-- Partie Entrées du menu-->
-    <div class="categorie">
+        <div class="favorite">
+          <i class="far fa-heart"></i>
+          <i class="fas fa-heart"></i>
+        </div>
+        <!-- <i class="fas fa-heart"></i> -->
+      </div>
+      <!-- Partie Entrées du menu-->
+      <div class="categorie categorie1">
         <h3>Entrées</h3>
-        <span class="bar_divider"></span>
+        <h4 class="bar_divider"></h4>
 
         <article class="label_box">
-            <div class="anim_label">
-                <span>Tartare de thon</span>
-                <div class="presentation_entree">
-                    <p>Assaisonné au yuzu</p>
-                    <p class="price">25€</p>
-                </div>
-            </div>
-            <i class="fa-solid fa-circle-check"></i>   
+          <div class="label_description">
+            <h4>Tartare de thon</h4>
+            <p>Assaisonné au yuzu</p>
+          </div>
+          <p class="price">25€</p>
+          <div class="check_area">
+            <i class="fas fa-check"></i>
+          </div>
         </article>
 
         <article class="label_box">
-            <div class="anim_label">
-                <span>Bouchée de homard croustillant</span>
-                <div class="presentation_entree">
-                    <p>Et sa farandole de petits légumes</p>
-                    <p class="price">35€</p>
-                </div>
-            </div>
-            <i class="fa-solid fa-circle-check"></i>   
+          <div class="label_description">
+            <h4>Bouchée de homard croustillant</h4>
+            <p>Et sa farandole de petits légumes</p>
+          </div>
+          <p class="price">35€</p>
+          <div class="check_area">
+            <i class="fas fa-check"></i>
+          </div>
         </article>
 
         <article class="label_box">
-            <div class="anim_label">
-                <span>Velouté de cèpes</span>
-                <div class="presentation_entree">
-                    <p>Aux truffes</p>
-                    <p class="price">20€</p>
-                </div>
-            </div>
-            <i class="fa-solid fa-circle-check"></i>   
+          <div class="label_description">
+            <h4>Velouté de cèpes</h4>
+            <p>Aux truffes</p>
+          </div>
+          <p class="price">20€</p>
+          <div class="check_area">
+            <i class="fas fa-check"></i>
+          </div>
         </article>
+      </div>
 
-    </div>
-
- <!-- Partie des plats du menu -->
-    <div class="categorie">
+      <!-- Partie des plats du menu -->
+      <div class="categorie categorie2">
         <h3>Plats</h3>
-        <span class="bar_divider"></span>
+        <h4 class="bar_divider"></h4>
 
         <article class="label_box">
-            <div class="anim_label">
-                <span>Poulet rôti aux herbes de provence</span>
-                <div class="presentation_entree">
-                    <p>Et sa crème de truffe</p>
-                    <p class="price">40€</p>
-                </div>
-            </div>
-            <i class="fa-solid fa-circle-check"></i>   
+          <div class="label_description">
+            <h4>Poulet rôti aux herbes de provence</h4>
+            <p>Et sa crème de truffe</p>
+          </div>
+          <p class="price">40€</p>
+          <div class="check_area">
+            <i class="fas fa-check"></i>
+          </div>
         </article>
 
         <article class="label_box">
-            <div class="anim_label">
-                <span>Langouste rôtie</span>
-                <div class="presentation_entree">
-                    <p>Et ses légumes de saison</p>
-                    <p class="price">35€</p>
-                </div>
-            </div>
-            <i class="fa-solid fa-circle-check"></i>   
+          <div class="label_description">
+            <h4>Langouste rôtie</h4>
+            <p>Et ses légumes de saison</p>
+          </div>
+          <p class="price">35€</p>
+          <div class="check_area">
+            <i class="fas fa-check"></i>
+          </div>
         </article>
 
         <article class="label_box">
-            <div class="anim_label">
-                <span>Côte de boeuf angus</span>
-                <div class="presentation_entree">
-                    <p>Et sa purée de panais</p>
-                    <p class="price">44€</p>
-                </div>
-            </div>
-            <i class="fa-solid fa-circle-check"></i>   
+          <div class="label_description">
+            <h4>Côte de boeuf angus</h4>
+            <p>Et sa purée de panais</p>
+          </div>
+          <p class="price">44€</p>
+          <div class="check_area">
+            <i class="fas fa-check"></i>
+          </div>
         </article>
+      </div>
 
-    </div>
-
- <!-- Partie des desserts du menu-->
-    <div class="categorie">
+      <!-- Partie des desserts du menu-->
+      <div class="categorie categorie3">
         <h3>Desserts</h3>
-        <span class="bar_divider"></span>
+        <h4 class="bar_divider"></h4>
 
         <article class="label_box">
-            <div class="anim_label">
-                <span>Farandole de desserts</span>
-                <div class="presentation_dessert">
-                    <p>Du chef</p>
-                    <p class="price">18€</p>
-                </div>
-            </div>
-            <i class="fa-solid fa-circle-check"></i>   
+          <div class="label_description">
+            <h4>Farandole de desserts</h4>
+            <p>Du chef</p>
+          </div>
+          <p class="price">18€</p>
+          <div class="check_area">
+            <i class="fas fa-check"></i>
+          </div>
         </article>
 
         <article class="label_box">
-            <div class="anim_label">
-                <span>Crème brulée</span>
-                <div class="presentation_entree">
-                    <p>Revisitée</p>
-                    <p class="price">22€</p>
-                </div>
-            </div>
-            <i class="fa-solid fa-circle-check"></i>   
+          <div class="label_description">
+            <h4>Crème brulée</h4>
+            <p>Revisitée</p>
+          </div>
+          <p class="price">22€</p>
+          <div class="check_area">
+            <i class="fas fa-check"></i>
+          </div>
         </article>
 
         <article class="label_box">
-            <div class="anim_label">
-                <span>Tiramisu</span>
-                <div class="presentation_entree">
-                    <p>A la noisette</p>
-                    <p class="price">23€</p>
-                </div>
-            </div>
-            <i class="fa-solid fa-circle-check"></i>   
+          <div class="label_description">
+            <h4>Tiramisu</h4>
+            <p>A la noisette</p>
+          </div>
+          <p class="price">23€</p>
+          <div class="check_area">
+            <i class="fas fa-check"></i>
+          </div>
         </article>
+      </div>
 
-    </div>
-
-    <button type="button" class="order">Commander</button>
-
-</section>
-<!-- Partie du Footer -->
-<footer>
-    <h4>ohmyfood</h4>
-    <ul>
-        <!--logo--><li>Proposer un restaurant</li>
-        <!--logo--><li>Devenir partenaire</li>
+      <button type="button" class="order">Commander</button>
+    </section>
+    <!-- Partie du Footer -->
+    <footer>
+      <h1>ohmyfood</h1>
+      <ul>
+        <li>Proposer un restaurant</li>
+        <li>Devenir partenaire</li>
         <li>Mentions légales</li>
-        <li>Contact</li>
-    </ul>
-</footer>
-
-
-</body>
+        <li>
+          <a class="footer__link" href="mailto:contact@ohmyfood.com">Contact</a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
