--- a/francaise.html
+++ b/francaise.html
@@ -1,173 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OhMyFood | À la française</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet">
-
-</head>
-<body>
-
-<!-- Partie du Header -->
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- Partie du Header -->
     <header>
-        <a href="index.html">
-            <button type="button"><i class="fa-solid fa-arrow-left"></i></button>
-        </a>
-        <img src="img/ohmyfood.png" alt="logo ohmyfood"> <!-- LOGO ICI -->
+      <a href="index.html">
+        <button type="button"><i class="fa-solid fa-arrow-left"></i></button>
+      </a>
+      <img src="img/ohmyfood.png" alt="logo ohmyfood" />
+      <!-- LOGO ICI -->
     </header>
 
-<!-- Partie de l'image de fond -->
+    <!-- Partie de l'image de fond -->
     <section class="picture">
-        <img src="img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image de fond du menu A la française">
+      <img
+        src="img/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+        alt="image de fond du menu A la française"
+      />
     </section>
 
-<!-- Partie de la présentation du menu -->
+    <!-- Partie de la présentation du menu -->
     <section class="menu">
-        <div class="title">
-            <h2 class="title_menu">À la française</h2>
-            <i class="fa-regular fa-heart"></i>    
+      <div class="title">
+        <h2 class="title_menu">À la française</h2>
+        <div class="favorite">
+          <i class="far fa-heart"></i>
+          <i class="fas fa-heart"></i>
         </div>
-     <!-- Partie Entrées du menu-->
-        <div class="categorie">
-            <h3>Entrées</h3>
-            <span class="bar_divider"></span>
+      </div>
+      <!-- Partie Entrées du menu-->
+      <div class="categorie categorie1">
+        <h3>Entrées</h3>
+        <h4 class="bar_divider"></h4>
 
-            <article class="label_box">
-                <div class="anim_label">
-                    <span>Tartare de poulpe acidulé</span>
-                    <div class="presentation_entree">
-                        <p>Aux zests d'orange</p>
-                        <p class="price">25€</p>
-                    </div>
-                </div>
-                <i class="fa-solid fa-circle-check"></i>   
-            </article>
+        <article class="label_box">
+          <div class="label_description">
+            <h4>Tartare de poulpe acidulé</h4>
+            <p>Aux zests d'orange</p>
+          </div>
+          <p class="price">25€</p>
+          <div class="check_area">
+            <i class="fas fa-check"></i>
+          </div>
+        </article>
 
-            <article class="label_box">
-                <div class="anim_label">
-                    <span>Velouté de légumes d'antan</span>
-                    <div class="presentation_entree">
-                        <p>carotte, panais, topinambour</p>
-                        <p class="price">35€</p>
-                    </div>
-                </div>
-                <i class="fa-solid fa-circle-check"></i>   
-            </article>
+        <article class="label_box">
+          <div class="label_description">
+            <h4>Velouté de légumes d'antan</h4>
+            <p>carotte, panais, topinambour</p>
+          </div>
+          <p class="price">35€</p>
+          <div class="check_area">
+            <i class="fas fa-check"></i>
+          </div>
+        </article>
 
-            <article class="label_box">
-                <div class="anim_label">
-                    <span>Soupe à l'oignon</span>
-                    <div class="presentation_entree">
-                        <p>Revisitée</p>
-                        <p class="price">20€</p>
-                    </div>
-                </div>
-                <i class="fa-solid fa-circle-check"></i>   
-            </article>
+        <article class="label_box">
+          <div class="label_description">
+            <h4>Soupe à l'oignon</h4>
+            <p>Revisitée</p>
+          </div>
+          <p class="price">20€</p>
+          <div class="check_area">
+            <i class="fas fa-check"></i>
+          </div>
+        </article>
+      </div>
 
-        </div>
-    
-     <!-- Partie des plats du menu -->
-        <div class="categorie">
-            <h3>Plats</h3>
-            <span class="bar_divider"></span>
+      <!-- Partie des plats du menu -->
+      <div class="categorie categorie2">
+        <h3>Plats</h3>
+        <h4 class="bar_divider"></h4>
 
-            <article class="label_box">
-                <div class="anim_label">
-                    <span>Coquilles Saint-Jacques</span>
-                    <div class="presentation_entree">
-                        <p>Accompagnées d'une purée de panais</p>
-                        <p class="price">40€</p>
-                    </div>
-                </div>
-                <i class="fa-solid fa-circle-check"></i>   
-            </article>
+        <article class="label_box">
+          <div class="label_description">
+            <h4>Coquilles Saint-Jacques</h4>
+            <p>Accompagnées d'une purée de panais</p>
+          </div>
+          <p class="price">40€</p>
+          <div class="check_area">
+            <i class="fas fa-check"></i>
+          </div>
+        </article>
 
-            <article class="label_box">
-                <div class="anim_label">
-                    <span>Magret de canard</span>
-                    <div class="presentation_entree">
-                        <p>Et parmentier de pommes de terres</p>
-                        <p class="price">35€</p>
-                    </div>
-                </div>
-                <i class="fa-solid fa-circle-check"></i>   
-            </article>
+        <article class="label_box">
+          <div class="label_description">
+            <h4>Magret de canard</h4>
+            <p>Et parmentier de pommes de terres</p>
+          </div>
+          <p class="price">35€</p>
+          <div class="check_area">
+            <i class="fas fa-check"></i>
+          </div>
+        </article>
 
-            <article class="label_box">
-                <div class="anim_label">
-                    <span>Pigeonneau d'Ille-et-Vilaine</span>
-                    <div class="presentation_entree">
-                        <p>sur son lit de gnocchis aux légumes</p>
-                        <p class="price">44€</p>
-                    </div>
-                </div>
-                <i class="fa-solid fa-circle-check"></i>   
-            </article>
+        <article class="label_box">
+          <div class="label_description">
+            <h4>Pigeonneau d'Ille-et-Vilaine</h4>
+            <p>sur son lit de gnocchis aux légumes</p>
+          </div>
+          <p class="price">44€</p>
+          <div class="check_area">
+            <i class="fas fa-check"></i>
+          </div>
+        </article>
+      </div>
 
-        </div>
+      <!-- Partie des desserts du menu-->
+      <div class="categorie categorie3">
+        <h3>Desserts</h3>
+        <h4 class="bar_divider"></h4>
 
-     <!-- Partie des desserts du menu-->
-        <div class="categorie">
-            <h3>Desserts</h3>
-            <span class="bar_divider"></span>
+        <article class="label_box">
+          <div class="label_description">
+            <h4>Pétales de violettes glacés</h4>
+            <p>Et purée de noisettes</p>
+          </div>
+          <p class="price">18€</p>
+          <div class="check_area">
+            <i class="fas fa-check"></i>
+          </div>
+        </article>
 
-            <article class="label_box">
-                <div class="anim_label">
-                    <span>Pétales de violettes glacés</span>
-                    <div class="presentation_dessert">
-                        <p>Et purée de noisettes</p>
-                        <p class="price">18€</p>
-                    </div>
-                </div>
-                <i class="fa-solid fa-circle-check"></i>   
-            </article>
+        <article class="label_box">
+          <div class="label_description">
+            <h4>Fondant au chocolat</h4>
+            <p>Revisité</p>
+          </div>
+          <p class="price">22€</p>
+          <div class="check_area">
+            <i class="fas fa-check"></i>
+          </div>
+        </article>
 
-            <article class="label_box">
-                <div class="anim_label">
-                    <span>Fondant au chocolat</span>
-                    <div class="presentation_entree">
-                        <p>Revisité</p>
-                        <p class="price">22€</p>
-                    </div>
-                </div>
-                <i class="fa-solid fa-circle-check"></i>   
-            </article>
+        <article class="label_box">
+          <div class="label_description">
+            <h4>Millefeuille croustillant</h4>
+            <p>Myrtilles et pâte d'amande</p>
+          </div>
+          <p class="price">23€</p>
+          <div class="check_area">
+            <i class="fas fa-check"></i>
+          </div>
+        </article>
+      </div>
 
-            <article class="label_box">
-                <div class="anim_label">
-                    <span>Millefeuille croustillant</span>
-                    <div class="presentation_entree">
-                        <p>Myrtilles et pâte d'amande</p>
-                        <p class="price">23€</p>
-                    </div>
-                </div>
-                <i class="fa-solid fa-circle-check"></i>   
-            </article>
-
-        </div>
-
-        <button type="button" class="order">Commander</button>
-
+      <button type="button" class="order">Commander</button>
     </section>
 
     <!-- Partie du Footer -->
     <footer>
-        <h4>ohmyfood</h4>
-        <ul>
-            <!--logo--><li>Proposer un restaurant</li>
-            <!--logo--><li>Devenir partenaire</li>
-            <li>Mentions légales</li>
-            <li>Contact</li>
-        </ul>
+      <h1>ohmyfood</h1>
+      <ul>
+        <li>Proposer un restaurant</li>
+        <li>Devenir partenaire</li>
+        <li>Mentions légales</li>
+        <li>
+          <a class="footer__link" href="mailto:contact@ohmyfood.com">Contact</a>
+        </li>
+      </ul>
     </footer>
-
-</body>
+  </body>
 </html>
