--- a/note.html
+++ b/note.html
@@ -29,7 +29,7 @@
     <!-- Partie du Header -->
     <header>
       <a href="index.html">
-        <button type="button"><i class="fa-solid fa-arrow-left"></i></button>
+        <span><i class="fa-solid fa-arrow-left"></i></span>
       </a>
       <img src="img/ohmyfood.png" alt="logo ohmyfood" />
       <!-- LOGO ICI -->
